k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-app-service
  namespace: portfolio
spec:
  selector:
    app: portfolio-app
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
